--- a/registration/registration-services/src/main/resources/spring.properties
+++ b/registration/registration-services/src/main/resources/spring.properties
@@ -307,14 +307,16 @@ tpm_public_key.service.authheader=Authorization:OAUTH
 ida_auth.service.requestsignrequired=false
 
 #Main Properties
-mosip.reg.client.url=https://devops.mosip.io/artifactory/libs-release/io/mosip/registration/registration-client/
+#mosip.reg.client.url=https://devops.mosip.io/artifactory/libs-release/io/mosip/registration/registration-client/
+mosip.reg.client.url=http\://jfrog-tf.southeastasia.cloudapp.azure.com:8081/artifactory/libs-release-local/io/mosip/registration/registration-client/
 mosip.reg.logpath=../logs
 mosip.reg.packetstorepath=../PacketStore
 mosip.reg.healthcheck.url=https://${mosip.hostname}/v1/authmanager/actuator/health
 mosip.reg.rollback.path=../BackUp
 mosip.reg.db.key=bW9zaXAxMjM0NQ\=\=
 mosip.reg.cerpath=/cer//mosip_cer.cer
-mosip.reg.xml.file.url=https://devops.mosip.io/artifactory/libs-release/io/mosip/registration/registration-client/maven-metadata.xml
+#mosip.reg.xml.file.url=https://devops.mosip.io/artifactory/libs-release/io/mosip/registration/registration-client/maven-metadata.xml
+mosip.reg.xml.file.url=http\://jfrog-tf.southeastasia.cloudapp.azure.com:8081/artifactory/libs-release-local/io/mosip/registration/registration-client/maven-metadata.xml
 mosip.reg.dbpath=db/reg
 mosip.reg.client.tpm.availability=N
 
