--- a/registration/registration-libs/src/main/resources/props/mosip-application.properties
+++ b/registration/registration-libs/src/main/resources/props/mosip-application.properties
@@ -1,6 +1,6 @@
 #1.0.6
 #Thu Feb 06 01:14:35 IST 2020
-mosip.reg.client.url=https\://13.67.89.138/artifactory/libs-release-local/io/mosip/registration/registration-client/
+mosip.reg.client.url=https\://nginxtf.southeastasia.cloudapp.azure.com/artifactory/libs-release-local/io/mosip/registration/registration-client/
 mosip.reg.env=qa
 mosip.reg.version=1.0.6
 mosip.reg.mdm.server.port=8080
@@ -10,7 +10,7 @@ mosip.reg.healthcheck.url=https\://${mosip.hostname}/v1/authmanager/actuator/hea
 mosip.reg.rollback.path=../BackUp
 mosip.reg.db.key=bW9zaXAxMjM0NQ\=\=
 mosip.reg.cerpath=/cer//mosip_cer.cer
-mosip.reg.xml.file.url=https\://13.67.89.138/artifactory/libs-release-local/io/mosip/registration/registration-client/maven-metadata.xml
+mosip.reg.xml.file.url=https\://nginxtf.southeastasia.cloudapp.azure.com/artifactory/libs-release-local/io/mosip/registration/registration-client/maven-metadata.xml
 mosip.reg.dbpath=db/reg
 mosip.reg.app.key=bBQX230Wskq6XpoZ1c+Ep1D+znxfT89NxLQ7P4KFkc4\=
 mosip.reg.client.tpm.availability=N
