--- a/registration/registration-services/src/main/resources/spring.properties
+++ b/registration/registration-services/src/main/resources/spring.properties
@@ -314,7 +314,7 @@ mosip.reg.healthcheck.url=https://${mosip.hostname}/v1/authmanager/actuator/heal
 mosip.reg.rollback.path=../BackUp
 mosip.reg.db.key=bW9zaXAxMjM0NQ\=\=
 mosip.reg.cerpath=/cer//mosip_cer.cer
-mosip.reg.xml.file.url=https://nginxsprod.eastus.cloudapp.azure.com/artifactory/libs-release-local/io/mosip/registration/registration-client/
+mosip.reg.xml.file.url=https://nginxsprod.eastus.cloudapp.azure.com/artifactory/libs-release-local/io/mosip/registration/registration-client/maven-metadata.xml
 mosip.reg.dbpath=db/reg
 mosip.reg.client.tpm.availability=N
 
