--- a/pom.xml
+++ b/pom.xml
@@ -87,7 +87,8 @@
                           <additionalJOption>-Xdoclint:none</additionalJOption>
                   </configuration>
                 </plugin>
-     
+
+-->      
                 <plugin>
                   <groupId>org.apache.maven.plugins</groupId>
                   <artifactId>maven-gpg-plugin</artifactId>
@@ -95,14 +96,14 @@
                   <executions>
                         <execution>
                           <id>sign-artifacts</id>
-                          <phase>verify</phase>
+                          <phase>deploy</phase>
                           <goals>
                                 <goal>sign</goal>
                           </goals>
                         </execution>
                   </executions>
                 </plugin>
---> 
+
           </plugins>
         </build>
 
